--- a/HRM/Shared/NavMenu.razor
+++ b/HRM/Shared/NavMenu.razor
@@ -9,6 +9,7 @@
     <ul class="nav flex-column">
         <li class="nav-item px-3">
             <MudNavLink Href="/employee/list-employees">Danh sách nhân viên</MudNavLink>
+            <MudNavLink Href="/employee/on-shift">Vào ca</MudNavLink>
             <AuthorizeView Roles="Admin">
                 <Authorized Context="admin">
                     <MudNavGroup Title="Quản lý" Style="color:white">
