--- a/HRM/Components/Personel/Profile/ProfileEmployee.razor
+++ b/HRM/Components/Personel/Profile/ProfileEmployee.razor
@@ -189,7 +189,7 @@
                                            Size="Size.Large"
                                            Variant="Variant.Filled"
                                            Color="@(_isEditShift ? Color.Error: Color.Primary)">
-                                    Sửa tan ca
+                                     @(_isEditShift ? "Hủy": "Sửa tan ca")
                                 </MudButton>
                             </div>
                             @if (_isEditShift == true)
