--- a/HRM/Shared/NavMenu.razor
+++ b/HRM/Shared/NavMenu.razor
@@ -19,7 +19,8 @@
                             <MudNavLink Href="/management/leave-application">Duyệt đơn nghỉ phép</MudNavLink>
                         </MudNavGroup>
                         <MudNavGroup Title="Thống kê" Style="color:white">
-                            
+                            <MudNavLink Href="/management/employees">Nhân sự</MudNavLink>
+                            <MudNavLink Href="/management/salary">Lương thưởng</MudNavLink>
                         </MudNavGroup>
                         <MudNavLink Href="/management/configuration">Cấu hình</MudNavLink>
                         <MudNavLink Href="/Identity/Account/Register">Tạo tài khoản</MudNavLink>
