Finish task create notification

--- a/HRM/Shared/NavMenu.razor
+++ b/HRM/Shared/NavMenu.razor
@@ -23,6 +23,7 @@
                             <MudNavLink Href="/management/salary">Lương thưởng</MudNavLink>
                         </MudNavGroup>
                         <MudNavLink Href="/management/configuration">Cấu hình</MudNavLink>
+                        <MudNavLink Href="/management/notification">Thông báo</MudNavLink>
                         <MudNavLink Href="/Identity/Account/Register">Tạo tài khoản</MudNavLink>
                     </MudNavGroup>
                 </Authorized>
