Finish task create and design home page

--- a/HRM/Components/LeaveApplication/WriteLeaveApplication.razor
+++ b/HRM/Components/LeaveApplication/WriteLeaveApplication.razor
@@ -6,6 +6,7 @@
 @inject AuthenticationService AuthenticationService
 @inject NavigationManager NavigationManager
 @inject ISnackbar Snackbar
+@attribute [Authorize(Roles = "Admin,User")]
 
 <div class="container">
     <div class="bg-white p-4">
